// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm render snapshots 📸 Login should match snap shot 1`] = `
<div>
  <div
    className="login__form"
  >
    <div
      className="hidden__div"
    />
    <form
      className=""
    >
      <div
        className="form__inputs"
      >
        <div
          className="form-group"
          onChange={[MockFunction]}
        >
          <input
            autoComplete="username"
            className="mb-2 form-control"
            id="email"
            name="email"
            placeholder="Enter your email"
            type="email"
          />
        </div>
        <div
          className="form-group"
          onChange={[MockFunction]}
        >
          <input
            autoComplete="new-password"
            className="mb-2 form-control"
            id="password"
            name="password"
            placeholder="Enter a password"
            type="password"
          />
        </div>
      </div>
      <div
        className="form-group"
      >
        <button
          className="btn btn-dark btn-lg btn-pill"
          name="submit"
          onClick={[Function]}
          type="button"
        >
          Login
        </button>
      </div>
    </form>
  </div>
  <div>
    <h6>
      New to Billsnap?
      <button
        className="form__toggle btn btn-primary"
        onClick={[Function]}
        type="button"
      >
        Register an account.
      </button>
    </h6>
  </div>
</div>
`;

exports[`LoginForm render snapshots 📸 LoginContainer should match snap shot 1`] = `
<div
  className="login__container"
>
  <div>
    <div
      className="login__form"
    >
      <div
        className="hidden__div"
      />
      <form
        className=""
      >
        <div
          className="form__inputs"
        >
          <div
            className="form-group"
            onChange={[Function]}
          >
            <input
              autoComplete="username"
              className="mb-2 form-control"
              id="email"
              name="email"
              placeholder="Enter your email"
              type="email"
            />
          </div>
          <div
            className="form-group"
            onChange={[Function]}
          >
            <input
              autoComplete="new-password"
              className="mb-2 form-control"
              id="password"
              name="password"
              placeholder="Enter a password"
              type="password"
            />
          </div>
        </div>
        <div
          className="form-group"
        >
          <button
            className="btn btn-dark btn-lg btn-pill"
            name="submit"
            onClick={[Function]}
            type="button"
          >
            Login
          </button>
        </div>
      </form>
    </div>
    <div>
      <h6>
        New to Billsnap?
        <button
          className="form__toggle btn btn-primary"
          onClick={[Function]}
          type="button"
        >
          Register an account.
        </button>
      </h6>
    </div>
  </div>
</div>
`;
